# claudeCodeDashboard

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  claude_code_dashboard_konzept.docx  focus.ps1  index.html  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pricing_update.md
.github/workflows/: build.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: mod.rs  parser.rs  watcher.rs
src-tauri/src/db/: mod.rs
src/components/Dashboard/: ActiveSessionBanner.tsx  CostSummaryCard.tsx  DailyCostChart.tsx  TokenDonutChart.tsx  TopProjectsList.tsx  index.tsx
src/components/Projects/: index.tsx
src/components/SessionDetail/: SessionLogTimeline.tsx  TokenTimelineChart.tsx  ToolUsageBreakdown.tsx  index.tsx
src/components/Settings/: index.tsx
src/components/layout/: Sidebar.tsx
src/components/shared/: CostBadge.tsx  ModelBadge.tsx
src/lib/: costCalc.ts  formatTime.ts
src/store/: appStore.ts
src/types/: index.ts
