[package]
name = "claude-code-dashboard"
version = "0.1.0"
edition = "2021"

[lib]
name = "claude_code_dashboard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

notify = "6"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
